// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscribing to the DOM should clear all DOM nodes 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px)\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px) and (max-height: 500px)\\"></style>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\"></style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render keyframes to a DOM node 1`] = `
"<html>

<head>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\">
    @-webkit-keyframes k1 {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @-moz-keyframes k1 {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @keyframes k1 {
      from {
        color: red
      }
      to {
        color: blue
      }
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render media rules and support rules to single DOM nodes 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\">
    .a {
      color: blue
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\">
    @supports (display: flex) {
      .b {
        display: flex
      }
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px)\\">
    .c {
      color: red
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px) and (max-height: 500px)\\">
    .d {
      color: yellow
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\" media=\\"(min-width: 300px) and (max-height: 500px)\\">
    @supports (display: grid) {
      .e {
        display: grid
      }
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render rules to a DOM node 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\">
    .a {
      background-color: red
    }

    .b {
      color: blue
    }

    .c:hover {
      color: red
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render static styles to a DOM node 1`] = `
"<html>

<head>
  <style data-fela-type=\\"STATIC\\" type=\\"text/css\\">
    body,
    html {
      background-color: red;
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should use insertRule 1`] = `
Array [
  "<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px)\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px) and (max-height: 500px)\\"></style>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\">
    @-webkit-keyframes k1 {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @-moz-keyframes k1 {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @keyframes k1 {
      from {
        color: red
      }
      to {
        color: blue
      }
    }
  </style>
</head>

<body></body>

</html>",
  Object {
    "": Array [
      CSSStyleRule {
        "__ends": 14,
        "__starts": 0,
        "parentRule": null,
        "parentStyleSheet": CSSStyleSheet {
          "cssRules": [Circular],
          "parentStyleSheet": null,
        },
        "selectorText": ".a",
        "style": CSSStyleDeclaration {
          "0": "color",
          "__starts": 2,
          "_importants": Object {
            "color": "",
          },
          "color": "blue",
          "length": 1,
          "parentRule": [Circular],
        },
      },
    ],
    "(min-width: 300px)": Array [
      CSSStyleRule {
        "__ends": 13,
        "__starts": 0,
        "parentRule": null,
        "parentStyleSheet": CSSStyleSheet {
          "cssRules": [Circular],
          "parentStyleSheet": null,
        },
        "selectorText": ".b",
        "style": CSSStyleDeclaration {
          "0": "color",
          "__starts": 2,
          "_importants": Object {
            "color": "",
          },
          "color": "red",
          "length": 1,
          "parentRule": [Circular],
        },
      },
    ],
    "(min-width: 300px) and (max-height: 500px)": Array [
      CSSStyleRule {
        "__ends": 16,
        "__starts": 0,
        "parentRule": null,
        "parentStyleSheet": CSSStyleSheet {
          "cssRules": [Circular],
          "parentStyleSheet": null,
        },
        "selectorText": ".c",
        "style": CSSStyleDeclaration {
          "0": "color",
          "__starts": 2,
          "_importants": Object {
            "color": "",
          },
          "color": "yellow",
          "length": 1,
          "parentRule": [Circular],
        },
      },
    ],
  },
]
`;
